# cloud-deployment

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml  docker-build-push.yml
data/: stations.csv  vehicles.csv
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  Toast.tsx  api.ts  index.css
src/tlvflow/: logging.py
src/tlvflow.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/tlvflow/api/: app.py  routes.py  schemas.py  server.py
src/tlvflow/domain/: __init__.py  enums.py  maintenance_event.py  payment.py  payment_service.py  reports.py  rides.py  stations.py  users.py  vehicles.py
src/tlvflow/persistence/: active_users_repository.py  degraded_vehicles_repository.py  in_memory.py  loaders.py  maintenance_repository.py  payments_repository.py  rides_repository.py  state_store.py  users_repository.py
src/tlvflow/repositories/: interfaces.py
src/tlvflow/services/: degraded_vehicles_service.py  link_vehicles.py  rides_service.py  stations_service.py  users_service.py  (+1 more)
tests/integration/: test_active_users.py  test_rides_router.py  test_stations_router.py  test_users_router.py  test_vehicles_router.py
tests/unit/: test_degraded_coverage.py  test_domain_coverage.py  test_loaders.py  test_payment_service.py  test_rides_router_unit.py  test_rides_service_coverage.py  test_server_entrypoint.py  test_state_persistence.py  test_stations_router.py  test_stations_service.py  test_stations_service_coverage.py  test_users_router_unit.py  test_vehicles_router_unit.py
(+22 files in other folders)
